# mo-cat-studio

./: LICENSE  README.md
backend/: .gitignore  README.md  main.py  model_factory.py  pyproject.toml  tracker_engine.py
backend/sam_3d_body/: LICENSE  sam_3d_body_estimator.py
backend/sam_3d_body/metadata/: mhr_skeleton.json
backend/scripts/: __init__.py  setup_mhr_assets.py
backend/tracker/: __init__.py  blender_export_fbx.py  camera.py  constraints.py  exporter.py  face_embedding_manager.py  face_recognizer.py  similarity_metrics.py  track_merger.py  track_state.py  tracker.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: PlaybackControls.tsx  Timeline.tsx  Viewer3D.tsx
frontend/src/hooks/: useKeyboardShortcuts.tsx  useMocapControls.ts  useMocapWebSocket.ts  usePlaybackManager.ts
frontend/src/utils/: indexedDB.ts
